# bioscripts

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
antismash/: bgc_completeness.py  bgc_synteny.py  count_regions.py  tabulate_regions.py
blast/: annotate_blast.py
fuzznuc/: merge_gbk.py  metadata2table.py
genomics/: amr_prevalence_matrix.py  deduplicate_genomes.py  detect_duplicate_strains.py  fetch_genomes_accession.sh  fetch_genomes_taxon.sh  hydrate_genomes.sh  island_finder.py  resistance_gene_context.py
misc/: expression_annotate.py  extract_upstream_gene_region.py  get_organism_name_from_reference.py  operon_coexpression.py  reference2assembly.py
